--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/t1907m_ead_practical?useSSl=false
+spring.datasource.url=jdbc:mysql://localhost:3306/t1907m?useSSl=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
-
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
