--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
 spring.messages.encoding=UTF-8
 
-spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.prefix=/webapp/resources/
 spring.mvc.view.suffix=.jsp
 
 
